--- a/1_Src/1_DescriptionCrawler/descriptionCrawler.ipynb
+++ b/1_Src/1_DescriptionCrawler/descriptionCrawler.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⚡ Start - 2024-07-20 17:09:28.802943 ⚡\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"⚡ Start - {} ⚡\\n\".format(datetime.datetime.now()))\n",
     "startTime = datetime.datetime.now()"
@@ -60,17 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- #️⃣ Apps: 3 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DATA_PATH = \"../../0_Data/3_MalCatSet.csv\"\n",
     "\n",
@@ -78,89 +61,30 @@
     "appsDF = pd.read_csv(DATA_PATH)\n",
     "\n",
     "# TEST\n",
-    "appsDF = appsDF.head(3)\n",
+    "#appsDF = appsDF.head(50)\n",
     "\n",
     "print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sha256</th>\n",
-       "      <th>pkgName</th>\n",
-       "      <th>classID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>24D3490CF23842A791CBB5B10F1427808F4B163F9C4927...</td>\n",
-       "      <td>com.rytong.airchina</td>\n",
-       "      <td>Airlines</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2D3D869A1DF82ACDCABBB08277ADECB8E5B64DB4DB516C...</td>\n",
-       "      <td>com.rytong.hnair</td>\n",
-       "      <td>Airlines</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>69C81403C28E86FE90975BAB668DD9F3FDC4330717A484...</td>\n",
-       "      <td>com.nepel.scandriveanti</td>\n",
-       "      <td>Antivirus</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              sha256                  pkgName  \\\n",
-       "0  24D3490CF23842A791CBB5B10F1427808F4B163F9C4927...      com.rytong.airchina   \n",
-       "1  2D3D869A1DF82ACDCABBB08277ADECB8E5B64DB4DB516C...         com.rytong.hnair   \n",
-       "2  69C81403C28E86FE90975BAB668DD9F3FDC4330717A484...  com.nepel.scandriveanti   \n",
-       "\n",
-       "     classID  \n",
-       "0   Airlines  \n",
-       "1   Airlines  \n",
-       "2  Antivirus  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "appsDF.head(5)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,214 +113,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sha256</th>\n",
-       "      <th>pkgName</th>\n",
-       "      <th>classID</th>\n",
-       "      <th>gpDescription</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>24D3490CF23842A791CBB5B10F1427808F4B163F9C4927...</td>\n",
-       "      <td>com.rytong.airchina</td>\n",
-       "      <td>Airlines</td>\n",
-       "      <td>Air China is China’s only national flag carrie...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2D3D869A1DF82ACDCABBB08277ADECB8E5B64DB4DB516C...</td>\n",
-       "      <td>com.rytong.hnair</td>\n",
-       "      <td>Airlines</td>\n",
-       "      <td>Hainan Airlines Company Profile  Hainan Airlin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>69C81403C28E86FE90975BAB668DD9F3FDC4330717A484...</td>\n",
-       "      <td>com.nepel.scandriveanti</td>\n",
-       "      <td>Antivirus</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              sha256                  pkgName  \\\n",
-       "0  24D3490CF23842A791CBB5B10F1427808F4B163F9C4927...      com.rytong.airchina   \n",
-       "1  2D3D869A1DF82ACDCABBB08277ADECB8E5B64DB4DB516C...         com.rytong.hnair   \n",
-       "2  69C81403C28E86FE90975BAB668DD9F3FDC4330717A484...  com.nepel.scandriveanti   \n",
-       "\n",
-       "     classID                                      gpDescription  \n",
-       "0   Airlines  Air China is China’s only national flag carrie...  \n",
-       "1   Airlines  Hainan Airlines Company Profile  Hainan Airlin...  \n",
-       "2  Antivirus                                                NaN  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "appsDF['gpDescription'] = appsDF['pkgName'].apply(getGoogleEnglishDescription)\n",
     "appsDF.head(3)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def getDescriptionFromMetaDataAndroZoo(pkgName, retries=5, delay=10):\n",
-    "    url = 'https://androzoo.uni.lu/api/get_gp_metadata/{}'.format(pkgName)\n",
-    "    params = {'apikey': os.getenv('ANDROZOO_API_KEY')}\n",
-    "    \n",
-    "    attempt = 0\n",
-    "    while attempt < retries:\n",
-    "        response = requests.get(url, params=params)\n",
-    "        \n",
-    "        # Return Description\n",
-    "        if response.status_code == 200:\n",
-    "            return response.json()[0]['descriptionHtml']\n",
-    "        # Retry \n",
-    "        elif response.status_code in [502, 503]:\n",
-    "            attempt += 1\n",
-    "            print(f\"Attempt {attempt} failed with status code {response.status_code}. Retrying in {delay} seconds...\")\n",
-    "            time.sleep(delay)\n",
-    "        else:\n",
-    "            print(f\"Request failed with status code {response.status_code}. No retries left.\")\n",
-    "            return None\n",
-    "    \n",
-    "    print(\"Max retries exceeded. Request failed.\")\n",
-    "    return None"
+    "AZ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Attempt 1 failed with status code 502. Retrying in 10 seconds...\n",
-      "Attempt 1 failed with status code 502. Retrying in 10 seconds...\n",
-      "Attempt 2 failed with status code 503. Retrying in 10 seconds...\n",
-      "Attempt 3 failed with status code 503. Retrying in 10 seconds...\n",
-      "Attempt 4 failed with status code 503. Retrying in 10 seconds...\n",
-      "Attempt 5 failed with status code 503. Retrying in 10 seconds...\n",
-      "Max retries exceeded. Request failed.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sha256</th>\n",
-       "      <th>pkgName</th>\n",
-       "      <th>classID</th>\n",
-       "      <th>gpDescription</th>\n",
-       "      <th>azDescription</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>24D3490CF23842A791CBB5B10F1427808F4B163F9C4927...</td>\n",
-       "      <td>com.rytong.airchina</td>\n",
-       "      <td>Airlines</td>\n",
-       "      <td>Air China is China’s only national flag carrie...</td>\n",
-       "      <td>Air China is China’s only national flag carrie...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2D3D869A1DF82ACDCABBB08277ADECB8E5B64DB4DB516C...</td>\n",
-       "      <td>com.rytong.hnair</td>\n",
-       "      <td>Airlines</td>\n",
-       "      <td>Hainan Airlines Company Profile  Hainan Airlin...</td>\n",
-       "      <td>Hainan Airlines was founded in 1993 in Hainan ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>69C81403C28E86FE90975BAB668DD9F3FDC4330717A484...</td>\n",
-       "      <td>com.nepel.scandriveanti</td>\n",
-       "      <td>Antivirus</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              sha256                  pkgName  \\\n",
-       "0  24D3490CF23842A791CBB5B10F1427808F4B163F9C4927...      com.rytong.airchina   \n",
-       "1  2D3D869A1DF82ACDCABBB08277ADECB8E5B64DB4DB516C...         com.rytong.hnair   \n",
-       "2  69C81403C28E86FE90975BAB668DD9F3FDC4330717A484...  com.nepel.scandriveanti   \n",
-       "\n",
-       "     classID                                      gpDescription  \\\n",
-       "0   Airlines  Air China is China’s only national flag carrie...   \n",
-       "1   Airlines  Hainan Airlines Company Profile  Hainan Airlin...   \n",
-       "2  Antivirus                                                NaN   \n",
-       "\n",
-       "                                       azDescription  \n",
-       "0  Air China is China’s only national flag carrie...  \n",
-       "1  Hainan Airlines was founded in 1993 in Hainan ...  \n",
-       "2                                               None  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "appsDF['azDescription'] = appsDF['pkgName'].apply(getDescriptionFromMetaDataAndroZoo)\n",
-    "appsDF.head(3)"
+    "# def getDescriptionFromMetaDataAndroZoo(pkgName, retries=5, delay=10):\n",
+    "#     url = 'https://androzoo.uni.lu/api/get_gp_metadata/{}'.format(pkgName)\n",
+    "#     params = {'apikey': os.getenv('ANDROZOO_API_KEY')}\n",
+    "    \n",
+    "#     attempt = 0\n",
+    "#     while attempt < retries:\n",
+    "#         response = requests.get(url, params=params)\n",
+    "        \n",
+    "#         # Return Description\n",
+    "#         if response.status_code == 200:\n",
+    "#             return response.json()[0]['descriptionHtml']\n",
+    "#         # Retry \n",
+    "#         elif response.status_code in [502, 503, 400]:\n",
+    "#             attempt += 1\n",
+    "#             print(f\"Attempt {attempt} failed with status code {response.status_code}. Retrying in {delay} seconds...\")\n",
+    "#             time.sleep(delay)\n",
+    "#         else:\n",
+    "#             print(f\"Request failed with status code {response.status_code}. No retries left.\")\n",
+    "#             return None\n",
+    "    \n",
+    "#     print(\"Max retries exceeded. Request failed.\")\n",
+    "#     return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# appsDF['azDescription'] = appsDF['pkgName'].apply(getDescriptionFromMetaDataAndroZoo)\n",
+    "# appsDF.head(3)"
    ]
   },
   {
@@ -408,98 +177,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- #️⃣ Apps: 3 \n",
-      "--- #️⃣ Apps: 2 \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sha256</th>\n",
-       "      <th>pkgName</th>\n",
-       "      <th>classID</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>24D3490CF23842A791CBB5B10F1427808F4B163F9C4927...</td>\n",
-       "      <td>com.rytong.airchina</td>\n",
-       "      <td>Airlines</td>\n",
-       "      <td>Air China is China’s only national flag carrie...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2D3D869A1DF82ACDCABBB08277ADECB8E5B64DB4DB516C...</td>\n",
-       "      <td>com.rytong.hnair</td>\n",
-       "      <td>Airlines</td>\n",
-       "      <td>Hainan Airlines Company Profile  Hainan Airlin...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              sha256              pkgName  \\\n",
-       "0  24D3490CF23842A791CBB5B10F1427808F4B163F9C4927...  com.rytong.airchina   \n",
-       "1  2D3D869A1DF82ACDCABBB08277ADECB8E5B64DB4DB516C...     com.rytong.hnair   \n",
-       "\n",
-       "    classID                                        description  \n",
-       "0  Airlines  Air China is China’s only national flag carrie...  \n",
-       "1  Airlines  Hainan Airlines Company Profile  Hainan Airlin...  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create the 'description' column\n",
-    "appsDF['description'] = appsDF['gpDescription'].fillna(appsDF['azDescription'])\n",
+    "# # Create the 'description' column\n",
+    "# appsDF['googlePlayDescription'] = appsDF['gpDescription'].fillna(appsDF['azDescription'])\n",
+    "# print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))\n",
+    "\n",
+    "# # Drop rows where both 'gpDescription' and 'azDescription' are NaN\n",
+    "# appsDF = appsDF.dropna(subset=['description'])\n",
+    "# print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))\n",
+    "\n",
+    "# appsDF = appsDF.drop(columns=['gpDescription', 'azDescription'])\n",
+    "# appsDF.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "appsDF['googlePlayDescription'] = appsDF['gpDescription']\n",
     "print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))\n",
     "\n",
-    "# Drop rows where both 'gpDescription' and 'azDescription' are NaN\n",
     "appsDF = appsDF.dropna(subset=['description'])\n",
     "print(\"--- #️⃣ Apps: {} \".format(appsDF.shape[0]))\n",
     "\n",
-    "appsDF = appsDF.drop(columns=['gpDescription', 'azDescription'])\n",
+    "appsDF = appsDF.drop(columns=['gpDescription'])\n",
     "appsDF.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "appsDF.to_csv(\"../TmpData/3_MalCatSet_Description.csv\")"
+    "appsDF.to_csv(\"../TmpData/3_MalCatSet_Description.csv\", index=False)"
    ]
   },
   {
@@ -511,19 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "🔚 --- End - 2024-07-20 17:12:14.988264 --- 🔚\n",
-      "⏱️ --- Time: 02 minutes and 46 seconds --- ⏱️\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "endTime = datetime.datetime.now()\n",
     "print(\"\\n🔚 --- End - {} --- 🔚\".format(endTime))\n",
